--- a/_posts/2019/2019-08-13-custom-404-page.markdown
+++ b/_posts/2019/2019-08-13-custom-404-page.markdown
@@ -4,7 +4,13 @@ title:  "Custom 404 Page"
 date:   2019-08-13 22:53:31 -0400
 categories: blog
 ---
+
+## Custom 404 Page
+
+One of cool features about Jekyll and Liquid include customization of HTML error pages, i.e., 404, to its own 404.md or 404.html file. If your project root, `/project-name`, has a file named 404.md or 404.html, it will be automatically loaded as error page.
+
 [Jekyll RB - 404 page](https://jekyllrb.com/tutorials/custom-404-page/)
+
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
 To add new posts, simply add a file in the `_posts` directory that follows the convention `YYYY-MM-DD-name-of-post.ext` and includes the necessary front matter. Take a look at the source for this post to get an idea about how it works.
