--- a/_posts/2019/2019-08-13-custom-404-page.markdown
+++ b/_posts/2019/2019-08-13-custom-404-page.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Custom 404 Page"
+title:  "Jekyll Custom 404 Page"
 date:   2019-08-13 22:53:31 -0400
 categories: blog
 comments: true
